--- a/index.html
+++ b/index.html
@@ -16,86 +16,26 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Ben's World Of Transformers</title>
 </head>
-<body>
+<body class="page">
     <section class="header">
-       <!-- <small>.header</small> -->
-       <h1 class="site-logo"><a href="/"><img src="img/site-logo.png" alt="site-logo"></a></h1>
-			 <div class="hero-unit"></div>
-       <nav>
-			 	<ul>
-					<li><a href="#">Toy Reviews</a></li>
-					<li><a href="#">Events</a></li>
-					<li><a href="#">Comic Books</a></li>
-					<li><a href="#">Interviews</a></li>
-					<li><a href="#">Movies</a></li>
-			 	</ul>
-			 </nav>
+       <small>.header</small>
     </section><!--end header-->
+
     <section class="content">
-       <!-- <small>.content</small> -->
-       <div class="rotating-ad-banner">
-        <a href-"#0"><img src="/img/rotating-ad-banner.jpg" alt="ad-banner"></a>
-      </div><!--end rotating-ad-banner-->
+
       <section class="main">
-        <!-- <small>.main</small> -->
-        <div class="copy-container">
-  			 <div class="copy">
-  				 <p><strong>BWTF.COM </strong>was established in 1997 following the debut of the Beast Wars Transformers program. Originally dedicated to Beast Wars Transformers alone, the site continued to cover Transformers after Beast Wars ended.</p>
-
-           <p>Now over ten years old, BWTF.COM is dedicated to covering Transformers in all its incarnations from Generation One to any current series. BWTF.COM seeks to offer reviews, images and archived information on the Transformers line to provide an online location for fans new and old to learn about their favorite robots in disguise. Site features include toy reviews, interviews, episode reviews, comic book reviews and photos.</p>
-
-           <p>BWTF.COM is run by Benson "Wonko the Sane" Yee, a fan of Transformers since the line's inception in 1984. Ben has been interviewed by several publications including Mass Appeal magazine, The Associated Press and appeared on an episode of the Canadian television show "Fanatical" in 2007. His first "Beast Wars" series of books was published in 2007 by IDW Publishing and he helps plan Botcon, the annual Transformers convention. His hobbies include writing, kayaking, working out and cooking (but not simultaneously).</p>
-
-           <p>Ben is supported by a cadre of friends, family and a mighty an adorable cat named Tigger. For many years, his mighty cat Rhino was at his side as well. His biggest support base comes from the super cool fans who visit this site.</p>
-  			 </div><!--end copy-->
-  			</div><!--end copy-container-->
-
-        <div class="media-block-container">
-         <div class="media-block med">
-          <div class="media-block-eyebrow red"><p>New Arrivals</p></div>
-           <p class="media-block-title">Checkout The Latest Toys Selections</p>
-           <div class="media-block-cta red"><a href="#0">Visit Our Toys Section</a></div>
-         </div><!--end media-block-->
-         <div class="media-block med">
-         <div class="media-block-eyebrow red"><p>New Arrivals</p></div>
-          <p class="media-block-title">Checkout The Latest Toys Selections</p>
-          <div class="media-block-cta red"><a href="#0">Visit Our Toys Section</a></div>
-        </div><!--end media-block-->
-        <div class="media-block med">
-         <div class="media-block-eyebrow red"><p>New Arrivals</p></div>
-          <p class="media-block-title">Checkout The Latest Toys Selections</p>
-          <div class="media-block-cta red"><a href="#0">Visit Our Toys Section</a></div>
-        </div><!--end media-block-->
-        <div class="media-block med">
-         <div class="media-block-eyebrow red"><p>New Arrivals</p></div>
-          <p class="media-block-title">Checkout The Latest Toys Selections</p>
-          <div class="media-block-cta red"><a href="#0">Visit Our Toys Section</a></div>
-        </div><!--end media-block-->
-       </div><!--end media-block-container-->
-       <div class="social-media-widget-container twitter-widget">
-   			<div class="social-media-widget">
-   				<a class="twitter-timeline" data-width="375" data-height="500" href="https://twitter.com/BWTF_Ben"></a> <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
-   			</div>
-   			<div class="social-media-widget facebook-widget">
-   				<iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2Fbensworldtf%2F&tabs=timeline&width=375&height=500&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId" width="375" height="500" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true"></iframe>
-   			</div>
-   		</div><!--end social-media-widget-container-->
-  		<div class="gallery-container">
-  			<!-- <div id="nanogallery2" data-nanogallery2>
-  					<a href="../img/gallery_imgs/tf1.jpg" data-ngThumb="../img/gallery_imgs/tf1.jpg"> TF Image1</a>
-  					<a href="../img/gallery_imgs/tf2.jpg" data-ngThumb="../img/gallery_imgs/tf2.jpg"> TF Image2</a>
-  					<a href="../img/gallery_imgs/tf3.jpg" data-ngThumb="../img/gallery_imgs/tf3.jpg"> TF Image3</a>
-  					<a href="../img/gallery_imgs/tf4.jpg" data-ngThumb="../img/gallery_imgs/tf4.jpg"> TF Image4</a>
-  					<a href="../img/gallery_imgs/tf5.jpg" data-ngThumb="../img/gallery_imgs/tf5.jpg"> TF Image5</a>
-  					<a href="../img/gallery_imgs/tf6.jpg" data-ngThumb="../img/gallery_imgs/tf6.jpg"> TF Image6</a>
-  			</div><!--end nanogallery-->
+        <small>.main</small>
       </section><!--end main-->
+
       <section class="sidebar">
        <small>.sidebar</small>
       </section><!-- end sidebar -->
+
     </section><!--end content-->
+
     <section class="footer">
       <small>.footer</small>
+      <p>&copy;2017 Grid Website. All Rights Reserved.</p>
     </section><!--end footer-->
 </body>
 </html>
