working on layout

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <title>Ben's World Of Transformers</title>
 </head>
 <body class="page">
-    <section class="header">
+  <section class="header">
       <h1 class="site-logo"><a href="/"><img src="img/site-logo.png" alt="site-logo"></a></h1>
        <div class="hero-unit"></div>
        <nav>
@@ -30,35 +30,35 @@
          </ul>
        </nav>
     </section><!--end header-->
+    <section class="masthead">
+      <ul class="rotating-ad-banner bxslider">
+        <li><a href-"#0"><img src="img/rotating-ad-banner.jpg" alt="ad-banner"></a></li>
+      </ul>
 
+      <ul class="featured-section bxslider">
+       <li>
+         <div class="featured-section-container">
+          <div class="featured-section-item">
+           <div class="featured-section-eyebrow red"><p>Current Reviews</p></div>
+            <p class="featured-section-title">Checkout The Latest Toys Selections</p>
+            <div class="featured-section-cta red"><a href="#0">Visit Our Toys Section</a></div>
+          </div><!--end featured-section-block-->
+         </div><!--end featured-section-block-container-->
+       </li>
+       <li>
+         <div class="featured-section-container">
+          <div class="featured-section-item">
+           <div class="featured-section-eyebrow blue"><p>Current Reviews</p></div>
+            <p class="featured-section-title">Checkout The Latest News Section</p>
+            <div class="featured-section-cta blue"><a href="#0">Visit Our News Section</a></div>
+          </div><!--end featured-section-block-->
+         </div><!--end featured-section-block-container-->
+       </li>
+     </ul><!--endn .bxslider-->
+    </section>
     <section class="content">
 
       <section class="main">
-        <ul class="rotating-ad-banner bxslider">
-          <li><a href-"#0"><img src="img/rotating-ad-banner.jpg" alt="ad-banner"></a></li>
-        </ul>
-
-        <ul class="bxslider">
-         <li>
-           <div class="featured-section-container">
-            <div class="featured-section">
-             <div class="featured-section-eyebrow red"><p>Current Reviews</p></div>
-              <p class="featured-section-title">Checkout The Latest Toys Selections</p>
-              <div class="featured-section-cta red"><a href="#0">Visit Our Toys Section</a></div>
-            </div><!--end featured-section-block-->
-           </div><!--end featured-section-block-container-->
-         </li>
-         <li>
-           <div class="featured-section-container">
-            <div class="featured-section">
-             <div class="featured-section-eyebrow blue"><p>Current Reviews</p></div>
-              <p class="featured-section-title">Checkout The Latest News Section</p>
-              <div class="featured-section-cta blue"><a href="#0">Visit Our News Section</a></div>
-            </div><!--end featured-section-block-->
-           </div><!--end featured-section-block-container-->
-         </li>
-       </ul><!--endn .bxslider-->
-
        <div class="copy-container">
  			 <div class="copy">
  				 <p><strong>BWTF.COM </strong>was established in 1997 following the debut of the Beast Wars Transformers program. Originally dedicated to Beast Wars Transformers alone, the site continued to cover Transformers after Beast Wars ended.</p>
@@ -78,6 +78,16 @@
          <div class="media-block-cta red"><a href="#0">Visit Our Toys Section</a></div>
        </div><!--end media-block-->
        <div class="media-block med">
+       <div class="media-block-eyebrow red"><p>New Arrivals</p></div>
+        <p class="media-block-title">Checkout The Latest Toys Selections</p>
+        <div class="media-block-cta red"><a href="#0">Visit Our Toys Section</a></div>
+      </div><!--end media-block-->
+      <div class="media-block med">
+       <div class="media-block-eyebrow red"><p>New Arrivals</p></div>
+        <p class="media-block-title">Checkout The Latest Toys Selections</p>
+        <div class="media-block-cta red"><a href="#0">Visit Our Toys Section</a></div>
+      </div><!--end media-block-->
+      <div class="media-block med">
        <div class="media-block-eyebrow red"><p>New Arrivals</p></div>
         <p class="media-block-title">Checkout The Latest Toys Selections</p>
         <div class="media-block-cta red"><a href="#0">Visit Our Toys Section</a></div>
@@ -118,13 +128,13 @@
       <section class="sidebar">
         <h4 class="sidebar-header">Affiliates</h4>
  			 <div class="sidebar-widget-container affiliates">
- 				 <div class="sidebar-widget">
- 					 <div class="sidebar-widget-header">
- 						 <img class-sidebar-widget-header-img src="img/transformers_logo.png" alt="transformers logo image">
- 					 </div>
- 					 <img class="sidebar-widget-image amazon" src="img/amazon-transformer.png" alt="amazon-transformer image">
- 					 <a href="#0" class="sidebar-widget-cta primary">shop now</a>
- 				 </div><!--end sidebar-widget-->
+         <div class="sidebar-widget">
+ 		 	   	<div class="sidebar-widget-header">
+ 		 	   		<img class-sidebar-widget-header-img src="img/transformers_logo.png" alt="transformers logo image">
+ 		 	   	</div>
+ 					<img class="sidebar-widget-image amazon" src="img/amazon-transformer.png" alt="amazon-transformer image">
+ 					<a href="#0" class="sidebar-widget-cta red">shop now</a>
+ 		 	  </div><!--end sidebar-widget-->
 
  				 <div class="sidebar-widget">
  					 <a href="#0"><img class="sidebar-widget-image" src="img/sidebar-entertainment-earth.jpg" alt="amazon-transformer image"></a>
@@ -151,8 +161,9 @@
               </div><!--end sponsor-->
  					</div><!--end sidebar-widget-->
           </div><!--end sidebar-widget-container-->
-          <div class="sidebar-widget-container my-picks">
-             <h4 class="sidebar-header">My Picks</h4>
+
+         <h4 class="sidebar-header">My Picks</h4>
+         <div class="sidebar-widget-container my-picks">
              <script type="text/javascript">
                 amzn_assoc_placement = "adunit0";
                 amzn_assoc_tracking_id = "bensworoftra-20";
@@ -164,7 +175,7 @@
                 amzn_assoc_linkid = "6a3461d180f830e94c72bf9208947a65";
                 amzn_assoc_asins = "B011MIX29E,B00SOFZF08,B00WO0B1A2,B00ND5ZWKC,B00NYSQR7U,B00NYSR4ZO,B00P2SNIUE,B00TOVMXW4,B00P2SNILI,B018M5Y7TE,B006IMX18W,B00P2SNC4Q,B0194WRV4W,B00UCTS9Q6,B016ZP1IKO,B01B6IDA1U";
             </script>
-            <script src="//z-na.amazon-adsystem.com/widgets/onejs?MarketPlace=US"></script>
+     <script src="http://z-na.amazon-adsystem.com/widgets/onejs?MarketPlace=US"></script>
       </section><!-- end sidebar -->
 
     </section><!--end content-->
