reordered html elementsm fixing grid layout for med-devices

--- a/index.html
+++ b/index.html
@@ -19,17 +19,17 @@
 <body class="page">
   <section class="header">
       <h1 class="site-logo"><a href="/"><img src="img/site-logo.png" alt="site-logo"></a></h1>
-       <div class="hero-unit"></div>
-       <nav>
-         <ul>
-           <li><a href="#">Toy Reviews</a></li>
-           <li><a href="#">Events</a></li>
-           <li><a href="#">Comic Books</a></li>
-           <li><a href="#">Interviews</a></li>
-           <li><a href="#">Movies</a></li>
-         </ul>
-       </nav>
     </section><!--end header-->
+    <div class="hero-unit"></div>
+    <nav>
+      <ul>
+        <li><a href="#">Toy Reviews</a></li>
+        <li><a href="#">Events</a></li>
+        <li><a href="#">Comic Books</a></li>
+        <li><a href="#">Interviews</a></li>
+        <li><a href="#">Movies</a></li>
+      </ul>
+    </nav>
     <section class="masthead">
       <ul class="rotating-ad-banner bxslider">
         <li><a href-"#0"><img src="img/rotating-ad-banner.jpg" alt="ad-banner"></a></li>
@@ -54,7 +54,7 @@
           </div><!--end featured-section-block-->
          </div><!--end featured-section-block-container-->
        </li>
-     </ul><!--endn .bxslider-->
+     </ul><!--end .bxslider-->
     </section>
     <section class="content">
 
@@ -92,24 +92,14 @@
         <p class="media-block-title">Checkout The Latest Toys Selections</p>
         <div class="media-block-cta red"><a href="#0">Visit Our Toys Section</a></div>
       </div><!--end media-block-->
-      <div class="media-block med">
-       <div class="media-block-eyebrow red"><p>New Arrivals</p></div>
-        <p class="media-block-title">Checkout The Latest Toys Selections</p>
-        <div class="media-block-cta red"><a href="#0">Visit Our Toys Section</a></div>
-      </div><!--end media-block-->
-      <div class="media-block med">
-       <div class="media-block-eyebrow red"><p>New Arrivals</p></div>
-        <p class="media-block-title">Checkout The Latest Toys Selections</p>
-        <div class="media-block-cta red"><a href="#0">Visit Our Toys Section</a></div>
-      </div><!--end media-block-->
      </div><!--end media-block-container-->
 
      <div class="social-media-widget-container twitter-widget">
        <div class="social-media-widget">
-         <a class="twitter-timeline" data-width="375" data-height="500" href="https://twitter.com/BWTF_Ben"></a> <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
+         <a class="twitter-timeline" data-width="390" data-height="500" href="https://twitter.com/BWTF_Ben"></a> <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
        </div>
        <div class="social-media-widget facebook-widget">
-         <iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2Fbensworldtf%2F&tabs=timeline&width=375&height=500&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId" width="375" height="500" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true"></iframe>
+         <iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2Fbensworldtf%2F&tabs=timeline&width=390&height=500&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId" width="390" height="500" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true"></iframe>
        </div>
      </div><!--end social-media-widget-container-->
 
